ops/kubernetes/nginx-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-production.yml -o ops/kubernetes/
    kompose.version: 1.5.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: nginx
  name: nginx
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: nginx
    spec:
      containers:
      - image: docker.io/jwnwilson/noelwilson2018-nginx
        name: nginx
        ports:
        - containerPort: 80
        - containerPort: 443
        resources: {}
      restartPolicy: Always
status: {}
