ops/kubernetes/redis.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    name: redis
    redis-sentinel: "true"
    role: master
  name: redis-master
spec:
  containers:
    - name: master
      image: k8s.gcr.io/redis:v1
      ports:
        - containerPort: 6379
      resources:
        requests:
          memory: "64Mi"
          cpu: "0.05"
        limits:
          memory: "128Mi"
          cpu: "0.1"
      volumeMounts:
        - mountPath: /redis-master-data
          name: data
  volumes:
    - name: data
      emptyDir: {}
