ops/kubernetes/server-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-production.yml -o ops/kubernetes/
    kompose.version: 1.5.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: server
  name: server
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: server
    spec:
      containers:
      - args:
        - pipenv
        - run
        - gunicorn
        - webapp.wsgi:application
        - -w
        - "3"
        - -b
        - :8000
        image: docker.io/jwnwilson/noelwilson2018-server
        name: noelwilson2018-server-prod
        ports:
        - containerPort: 8000
        imagePullPolicy: Always
        resources: {}
        tty: true
        volumeMounts:
        - mountPath: /app/src/server/media
          name: media
        workingDir: /app/src/server
      restartPolicy: Always
      volumes:
      - name: media
        persistentVolumeClaim:
          claimName: media
status: {}
