ops/kubernetes/cache-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-production.yml -o ops/kubernetes/
    kompose.version: 1.5.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: cache
  name: cache
spec:
  ports:
  - name: "11211"
    port: 11211
    targetPort: 11211
  selector:
    io.kompose.service: cache
status:
  loadBalancer: {}
