ops/kubernetes/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-production.yml -o ops/kubernetes/
    kompose.version: 1.5.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: server
  name: server
spec:
  ports:
  - name: "8000"
    port: 8000
    targetPort: 8000
  selector:
    io.kompose.service: server
status:
  loadBalancer: {}
