ops/kubernetes/server.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: server
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      name: server
      labels:
        name: django
    spec:
      containers:
        - name: cloudsql-proxy
          image: gcr.io/cloudsql-docker/gce-proxy:1.11
          command: [
            "/cloud_sql_proxy",
            "-instances=noelwilson-2018:europe-west1:noel-wilson=tcp:5432",
            "-credential_file=/secrets/cloudsql/credentials.json"
          ]
          # [START cloudsql_security_context]
          securityContext:
            runAsUser: 2  # non-root user
            allowPrivilegeEscalation: false
          # [END cloudsql_security_context]
          volumeMounts:
            - name: cloudsql-instance-credentials
              mountPath: /secrets/cloudsql
              readOnly: true
          resources:
            requests:
              memory: "100Mi"
              cpu: "0.05"
            limits:
              memory: "100Mi"
              cpu: "0.05"
        - name: server
          image: docker.io/jwnwilson/jwnwilson_server:0.1.272
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "500Mi"
              cpu: "0.05"
            limits:
              memory: "1Gi"
              cpu: "0.25"
          tty: true
          volumeMounts:
            - mountPath: /app/src/server/media
              name: media
          workingDir: /app/src/server
      restartPolicy: Always
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: media
        - name: cloudsql-instance-credentials
          secret:
            secretName: cloudsql-instance-credentials
status: {}

---

apiVersion: v1
kind: Service
metadata:
  name: server
  labels:
    name: django
spec:
  ports:
    - name: "8000"
      port: 8000
      targetPort: 8000
  selector:
    name: django
  type: NodePort
status:
  loadBalancer: {}
