ops/kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: server-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: “true”
    kubernetes.io/ingress.global-static-ip-name: noel-wilson-ip
spec:
  rules:
  - http:
      paths:
      - path: /static
        backend:
          serviceName: nginx
          servicePort: 80
      - path: /media
        backend:
          serviceName: nginx
          servicePort: 80
      - path: /
        backend:
          serviceName: server
          servicePort: 8000
  tls:
  - secretName: tls-prod-cert
    hosts:
      - jwnwilson.com
      - noel-wilson.co.uk
